fix alignment

--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -12,6 +12,7 @@
 
 .list-page-grid {
   display: grid;
+  align-content: start;
   gap: var(--nx-space-6);
 }
 
